# hubris

./: Cargo.toml
app/demo-stm32f4-discovery/: app.toml
drv/piezo-element/: Cargo.toml
drv/piezo-element-api/: Cargo.toml  build.rs
drv/piezo-element-api/src/: lib.rs
drv/piezo-element/src/: main.rs
drv/stm32fx-gpio/: Cargo.toml
drv/stm32fx-gpio-api/src/: lib.rs
drv/stm32fx-gpio/src/: main.rs
drv/stm32fx-rcc/: Cargo.toml  build.rs
drv/stm32fx-rcc-api/: Cargo.toml  build.rs
drv/stm32fx-rcc-api/src/: lib.rs
drv/stm32fx-rcc/src/: main.rs
drv/stm32fx-spi/: Cargo.toml
drv/stm32fx-spi-server/: Cargo.toml  build.rs
drv/stm32fx-spi-server/src/: main.rs
drv/stm32fx-spi/src/: lib.rs
drv/user-leds/: Cargo.toml
drv/user-leds/src/: main.rs
drv/w5100-spi/: Cargo.toml  build.rs
drv/w5100-spi-api/: Cargo.toml  build.rs
drv/w5100-spi-api/src/: lib.rs
drv/w5100-spi/src/: main.rs  tcp.rs  w5100.rs
drv/w5100-spi/src/w5100/: socket.rs  spi_stream.rs
idl/: jukebox.idol  piezo-element.idol  stm32fx-rcc.idol  w5100.idol
task/jukebox/: Cargo.toml  build.rs
task/jukebox-api/: Cargo.toml  build.rs
task/jukebox-api/src/: lib.rs
task/jukebox-tcp/: Cargo.toml
task/jukebox-tcp/src/: main.rs
task/jukebox/src/: main.rs  songs.rs
task/w5100-echo/: Cargo.toml
task/w5100-echo/src/: main.rs
